--- a/Projeto/src/main/resources/templates/index.html
+++ b/Projeto/src/main/resources/templates/index.html
@@ -10,5 +10,6 @@
 <a href="/admin">Admin Page</a><br>
 <a href="/login">Login</a><br>
 <a href="/logout">Logout</a><br>
+<a href="http://localhost:8080/swagger-ui.html">swagger</a><br>
 </body>
 </html>
