Um pouco dos styles
20 min

--- a/Projeto/src/main/resources/templates/downloadUpload.html
+++ b/Projeto/src/main/resources/templates/downloadUpload.html
@@ -2,6 +2,32 @@
 <html ></html>
 
 <head>
+    <style>
+        input {
+        font-family: Arial;
+        border-width: 0px;
+        background-color: lightgray;
+        width: 110px;
+        padding:5px;
+        }
+        h1, h2, h3{
+        font-family: Arial;
+        text-align: center;
+        background-image: url(..\images\fundoTitulo.jpg); /* Não funciona ainda */
+        }
+        div {
+            align-content: center;
+            padding-bottom: 10px;
+        }
+        button {
+            font-family: Arial;
+            border-radius: 3px;
+            background-color: #7291FF;
+            border-width: 0px;
+            padding: 5px;
+            align-self: center; /* Arranjar algo que centralize esse botão */
+        }
+    </style>
 	<meta charset="ISO-8859-1">
 	<title>LoadArquivos</title>
 </head>
@@ -26,6 +52,7 @@
 	</div>
 	
     <div>
+        <h3>Lista de itens selecionados aqui</h3>
     </div>
     
 	<div>
