Add depedency e pequenas alterações

--- a/Projeto/src/main/resources/templates/admin.html
+++ b/Projeto/src/main/resources/templates/admin.html
@@ -5,6 +5,8 @@
 <title>Admin</title>
 </head>
 <body>
-<h1>Administrador</h1>
+<h1>Admin Page</h1>
+<a href="/">Home Page</a><br>
+<a href="/logout">Logout</a><br>
 </body>
 </html>
