Já é salvo em banco o nome e o local (Pasta Root do projeto) os documento do projeto

--- a/Projeto/src/main/resources/templates/admin.html
+++ b/Projeto/src/main/resources/templates/admin.html
@@ -5,8 +5,6 @@
 <title>Admin</title>
 </head>
 <body>
-<h1>Admin Page</h1>
-<a href="/">Home Page</a><br>
-<a href="/logout">Logout</a><br>
+<h1>Administrador</h1>
 </body>
 </html>
