--- a/Projeto/src/main/resources/templates/secure.html
+++ b/Projeto/src/main/resources/templates/secure.html
@@ -5,8 +5,7 @@
 <title>Secure Page</title>
 </head>
 <body>
-<h1>Secure Page</h1>
-<a href="/">Home Page</a><br>
-<a href="/logout">Logout</a>
+<h3>Secure Page</h3>
+<a href="/logout">logout</a>
 </body>
 </html>
