inicio de upload de arquivos

--- a/Projeto/src/main/resources/templates/index.html
+++ b/Projeto/src/main/resources/templates/index.html
@@ -11,5 +11,6 @@
 <a href="/login">Login</a><br>
 <a href="/logout">Logout</a><br>
 <a href="http://localhost:8080/swagger-ui.html">swagger</a><br>
+<a href="/downloadUpload">downloadUpload</a><br>
 </body>
 </html>
