--- a/Projeto/src/main/resources/templates/downloadUpload.html
+++ b/Projeto/src/main/resources/templates/downloadUpload.html
@@ -1,40 +1,63 @@
 <!DOCTYPE html>
-<html ></html>
+<html></html>
 
 <head>
-	<meta charset="ISO-8859-1">
-	<title>LoadArquivos</title>
+<meta charset="ISO-8859-1">
+<title>LoadArquivos</title>
 </head>
 <body>
-<h1>Documentos</h1>
+	<h1>Documentos</h1>
+	<form method="post" action="fileuploadservlet"
+		enctype="multipart/form-data">
+		<div>
+			<input type="file" name="file" /> <input type="submit" name="Upload" />
+		</div>
 
-<form>
+	</form>
+	<input id="ajaxfile" type="file" />
+	<br />
+	<button onclick="uploadFile()">Upload</button>
+	<script>
+		async
+		function uploadFile() {
+			let formData = new FormData();
+			formData.append("file", ajaxfile.files[0]);
+			await
+			fetch('fileuploadservlet', {
+				method : "POST",
+				body : formData
+			});
+			alert('Upload concluido com sucesso!');
+		}
+	</script>
 
-    <div>
-		<input type="text" text="Arquivo" name="arquivoUp"/>
-        <button onclick="uploadArquivo">Upload</button>
-	</div>
 
-	<div>
-		<input type="text" text="Documento" name="doc"/>
-        <input type="text" text="Seção" name="sec"/>
-        <input type="text" text="Sub-seção" name="subSec"/>
-        <input type="text" text="Bloco" name="block"/>
-        <input type="text" text="Código" name="code"/>
-        <input type="text" text="Remark" name="rem"/>
-        <button onclick="selectDoc">Selecionar</button>
-	</div>
-	
-    <div>
-    </div>
-    
-	<div>
-		<button onclick="downloadArquivo">Download</button>
-	</div>
-	
-    <div>
-    <h2>Últimos documentos baixados</h2>
-    </div>
-</form>
+
+	<form>
+		<div>
+			<input type="text" text="Arquivo" name="arquivoUp" />
+			<button onclick="uploadArquivo">Upload</button>
+
+		</div>
+
+		<div>
+			<input type="text" text="Documento" name="doc" /> <input type="text"
+				text="Seção" name="sec" /> <input type="text" text="Sub-seção"
+				name="subSec" /> <input type="text" text="Bloco" name="block" /> <input
+				type="text" text="Código" name="code" /> <input type="text"
+				text="Remark" name="rem" />
+			<button onclick="selectDoc">Selecionar</button>
+		</div>
+
+		<div></div>
+
+		<div>
+			<button onclick="downloadArquivo">Download</button>
+		</div>
+
+		<div>
+			<h2>Últimos documentos baixados</h2>
+		</div>
+	</form>
 </body>
 </html>
