--- a/Projeto/src/main/resources/templates/index.html
+++ b/Projeto/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <a href="/admin">Admin Page</a><br>
 <a href="/login">Login</a><br>
 <a href="/logout">Logout</a><br>
-<a href="http://localhost:8080/swagger-ui.html">swagger</a><br>
+<a href="http://localhost:8080/swagger-ui.html">Swagger</a><br>
 <div class="container">
     <div class="page-header">
         <h1>Escolhe a desgraCa do lugar que vc quer q seja o root dessa porcaria seu maconheiro</h1>
