--- a/Projeto/src/main/resources/templates/secure.html
+++ b/Projeto/src/main/resources/templates/secure.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h3>Secure Page</h3>
-<a href="/logout">logout</a>
+<a href="/logout">Logout</a><br>
+<a href="/">Home Page</a>
 </body>
 </html>
