--- a/Projeto/src/main/resources/templates/index.html
+++ b/Projeto/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <a href="http://localhost:8080/swagger-ui.html">swagger</a><br>
 <div class="container">
     <div class="page-header">
-        <h1>Escolhe a desgraCa do lugar que vc quer q seja o root dessa porcaria seu maconheiro</h1>
+        <h1>Escolhe a desgraCa do lugar que vc quer q seja o root</h1>
     </div>
     
     <div class="row">
