--- a/Projeto/src/main/resources/templates/admin.html
+++ b/Projeto/src/main/resources/templates/admin.html
@@ -3,10 +3,18 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Admin</title>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
 </head>
 <body>
 <h1>Administrador</h1>
-<a href="/logout">Logout</a><br>
-<a href="/">Home Page</a>
+<a href="/logout" type="button" class="btn btn-primary" >Logout</a><br>
+<a href="/" type="button" class="btn btn-primary" >Home Page</a>
 </body>
 </html>
