--- a/Projeto/src/main/resources/templates/login.html
+++ b/Projeto/src/main/resources/templates/login.html
@@ -4,6 +4,14 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>Login</title>
+	<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
 </head>
 <body>
 <div th:if="${param.error}">
@@ -24,9 +32,9 @@
 		<label>Password: <input type="password" name="password"/></label>
 	</div>
 	
-	<div><input type="submit" value="Sign in"></div>
+	<div><input type="submit" value="Sign in" class="btn btn-primary" ></div>
 
 </form>
-<a href="/">Home Page</a>
+<a href="/" class="btn btn-primary">Home Page</a>
 </body>
 </html>
