--- a/Projeto/src/main/resources/templates/index.html
+++ b/Projeto/src/main/resources/templates/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.or/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Index</title>
 </head>
 <body>
 <h1>Home Page!</h1>
-<a href="/secure">Secure Page</a><br>
+<a href="/home">Home Page</a><br>
+<a href="/cadastro">Cadastro</a><br>
 <a href="/admin">Admin Page</a><br>
 <a href="/login">Login</a><br>
 <a href="/logout">Logout</a><br>
