--- a/Projeto/src/main/resources/templates/login.html
+++ b/Projeto/src/main/resources/templates/login.html
@@ -14,6 +14,7 @@
 	crossorigin="anonymous"></script>
 </head>
 <body>
+<br>
 <div th:if="${param.error}">
 	Senha ou username invalido!
 </div>
@@ -34,7 +35,8 @@
 	
 	<div><input type="submit" value="Sign in" class="btn btn-primary" ></div>
 
-</form>
+</form><br>
+
 <a href="/" class="btn btn-primary">Home Page</a>
 </body>
 </html>
