--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
@@ -13,10 +13,18 @@
 	crossorigin="anonymous"></script>
 </head>
 <body>
-<form th:action="@{/block}" method="POST">
-				<input placeholder="Nome" name="block"/><br>
-				<input type="text" name="path"><br>
-				<button id="botaoCadastro" type="submit">Cadastrar</button><br>
-			</form>
+	<form th:action="@{/block}" method="POST">
+		<input placeholder="Nome" name="block"/><br>
+		<input type="text" name="path"><br>
+		<button id="botaoCadastro" type="submit">Cadastrar</button><br>
+	</form></br>
+			
+	<form th:action="@{/UploadFiles}" method="POST" enctype="multipart/form-data">
+		<input type="file" name="file" multiple/><br>
+		<input type="submit" value="Upload Files">Upload</button><br>
+	</form>
+	<div th:if="${msg}">
+		<span th:text="${msg}"></span>
+	</div>
 </body>
 </html>
