--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -14,17 +14,48 @@
 </head>
 <body>
 	<form th:action="@{/block}" method="POST">
-		<input placeholder="Nome" name="block"/><br>
-		<input type="text" name="path"><br>
-		<button id="botaoCadastro" type="submit">Cadastrar</button><br>
-	</form></br>
-			
-	<form th:action="@{/UploadFiles}" method="POST" enctype="multipart/form-data">
-		<input type="file" name="file" multiple/><br>
-		<input type="submit" value="Upload Files">Upload</button><br>
+		<input placeholder="Nome" name="block" /><br> <input type="text"
+			name="path"><br>
+		<button id="botaoCadastro" type="submit">Cadastrar</button>
+		<br>
+	</form>
+	</br>
+
+	<form th:action="@{/UploadFiles}" method="POST"
+		enctype="multipart/form-data">
+		<input type="file" name="file" multiple /><br> <input
+			type="submit" value="Upload Files">Upload
+		</button>
+		<br>
 	</form>
 	<div th:if="${msg}">
 		<span th:text="${msg}"></span>
 	</div>
+
+	<br />
+	<br />
+	<br />
+	<h4>teste</h4>
+	<form action="fileuploadservlet" method="POST"
+		enctype="multipart/form-data">
+		<input type="file" name="file" multiple /><br /> <input
+			type="submit" value="Upload" /><br /> <br /> <br />
+	</form>
+	<input id="ajaxfile" type="file" />
+	<br />
+	<button onclick="uploadFile()">Upload</button>
+	<script>
+		async
+		function uploadFile() {
+			let formData = new FormData();
+			formData.append("file", ajaxfile.files[0]);
+			await
+			fetch('fileuploadservlet', {
+				method : "POST",
+				body : formData
+			});
+			alert('Upload concluido com sucesso');
+		}
+	</script>
 </body>
 </html>
