--- a/Projeto/src/main/resources/templates/home.html
+++ b/Projeto/src/main/resources/templates/home.html
@@ -25,6 +25,8 @@
 	
 	<a type="button" class="btn btn-primary" href="/logout">Logout</a><br><br>
 	
+	<a type="button" class="btn btn-primary" href="/updown">Updown</a><br><br>
+	
 	<a type="button" class="btn btn-primary" href="http://localhost:8080/swagger-ui.html">Swagger</a><br><br>
 
 </body>
