Update View - Pages Ui
Alteração da visualização do usuário.
Estrutura da View composta por Navbar, Container e footer, respectivamente, barra de navegação implementada, Conteúdo do centro de cada  tela atualizado, Rodapé implementado para visualização do fim da página.
Formulários com aparência nova, botões e labels de acordo.

--- a/Projeto/src/main/resources/templates/login.html
+++ b/Projeto/src/main/resources/templates/login.html
@@ -14,7 +14,27 @@
 	crossorigin="anonymous"></script>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">SIRIUS</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cadastro">SigUp</a>
+      </li>
+    </ul>
+    <span class="navbar-text">
+      SingIn
+    </span>
+  </div>
+</nav>
 <br>
+<div class= "container">
 <div th:if="${param.error}">
 	Senha ou username invalido!
 </div>
@@ -37,6 +57,40 @@
 
 </form><br>
 
-<a href="/" class="btn btn-primary">Home Page</a>
+</div>
 </body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2021 Copyright: Sirius API 
+
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 </html>
