atualização do visual

--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -4,6 +4,9 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <meta charset="utf-8">
 <title>Cadastro</title>
+<script>
+
+</script>
 </head>
 <style>
 .container { 
@@ -37,7 +40,7 @@
 <br>
 <br>
 <br>
-<form action="cadastrar">
+<form action="cadastrar" onsubmit="return concluido();">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputName">Nome</label>
