--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -35,7 +35,7 @@
 
 	<form th:action="@{/UploadFile}" method="POST"
 		enctype="multipart/form-data" >
-		<input type="file" name="files" multiple /><br> <input
+		<input type="file" name="files" multiple /><br/> <br/><input
 			type="submit" class="btn btn-info" value="Subir Arquivo">
 		</button>
 		<br>
