--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -65,7 +65,7 @@
       <input type="password" class="form-control" placeholder="********">
     </div>
     <div class="form-group col-md-4">
-      <label for="inputPass">Confirme sua senha</label>
+      <label for="inputPass">Confirmar senha</label>
        <input name= "password" type="password" class="form-control" placeholder="********">
     </div>
     <div class="form-group col-md-4">
