--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -44,7 +44,7 @@
 	</form>
 	<br>
 	<form th:action="@{/DownloadFile}" method="GET" >
-		<input type="text"  class="form-group col-md-4" name="document" placeholder="documente"/><br> 
+		<input type="text"  class="form-group col-md-4" name="document" placeholder="document"/><br> 
 		<input type="text" class="form-group col-md-4" name="section" placeholder="section"/><br> 
 		<input type="text" class="form-group col-md-4" name="subsection" placeholder="subsection"/><br>
 		<input type="text" class="form-group col-md-4" name="block" placeholder="block"/><br>
