--- a/Projeto/src/main/resources/templates/index.html
+++ b/Projeto/src/main/resources/templates/index.html
@@ -1,29 +1,74 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.or/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Index</title>
+<title>Home</title>
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
+<script
+	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+	crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>Home Page!</h1>
-<a href="/home">Home Page</a><br>
-<a href="/cadastro">Cadastro</a><br>
-<a href="/admin">Admin Page</a><br>
-<a href="/login">Login</a><br>
-<a href="/logout">Logout</a><br>
-<a href="http://localhost:8080/swagger-ui.html">Swagger</a><br>
-<div class="container">
-    <div class="page-header">
-    </div>
-    
-    <div class="row">
-    <form th:action="@{/api/root}" method="POST">
-		<input type="file" webkitdirectory id="fileURL" name="root_path"/><br><br>
-		<button type="submit">Upload</button>
-			</form>
-</div>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">SIRIUS</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarText" aria-controls="navbarText"
+			aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarText">
+			<ul class="navbar-nav mr-auto">
 
-  </div>
+				<li class="nav-item"><a class="nav-link" href="/login">Login</a>
+				</li>
+
+				<li class="nav-item"><a class="nav-link" href="/updown">Download
+						e Upload</a></li>
+				<li class="nav-item"><a class="nav-link" href="/cadastro">Cadastro</a>
+				</li>
+
+			</ul>
+			<span class="navbar-text"> Home Page </span>
+		</div>
+	</nav>
+
+	<div
+		class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+		<div class="col-md-5 p-lg-5 mx-auto my-5">
+			<h1 class="display-4 font-weight-normal">Sirius</h1>
+			<p class="lead font-weight-normal">Comments here.</p>
+			<a class="btn btn-outline-secondary" href="#">Coming soon</a>
+		</div>
+		<div class="product-device shadow-sm d-none d-md-block"></div>
+		<div
+			class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+	</div>
+	<div
+		class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+		<div class="col-md-5 p-lg-5 mx-auto my-5">
+			<h1 class="display-4 font-weight-normal">Sirius</h1>
+			<p class="lead font-weight-normal">Comments here.</p>
+			<a class="btn btn-outline-secondary" href="#">Coming soon</a>
+		</div>
+		<div class="product-device shadow-sm d-none d-md-block"></div>
+		<div
+			class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+	</div>
+
 
 </body>
+<!-- Footer -->
+<footer class="page-footer font-small blue">
+
+	<!-- Copyright -->
+	<div class="footer-copyright text-center py-3">© 2021 Copyright:
+		Sirius API</div>
+	<!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 </html>
