--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -24,10 +24,6 @@
       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-
     </ul>
     <span class="navbar-text">
       Cadastro de Usuários
@@ -46,12 +42,12 @@
     </div>
     <div class="form-group col-md-6">
       <label for="inputLastName">Sobrenome</label>
-      <input name="lastname" type="text" class="form-control" id="inputPassword4" placeholder="Ultimo nome">
+      <input name="last_name" type="text" class="form-control" id="inputPassword4" placeholder="Ultimo nome">
     </div>
   </div>
   <div class="form-group">
     <label for="inputEmail">E-mail</label>
-   <input type="text" class="form-control"  placeholder="e-mail">
+   <input type="text" class="form-control"  placeholder="E-mail">
   </div>
   <div class="form-group">
     <label for="inputEmail">Confirme seu e-mail</label>
