--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -7,6 +7,11 @@
 <script>
 
 </script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <style>
 .container { 
@@ -75,7 +80,17 @@
       </label>
     </div>
   </div>
-  <input class="btn btn-info" type="submit" value="Salvar">
+  <input class="btn btn-info" type="button" id="cadastrar" value="Salvar">
+  
+			<script>
+				$('#cadastrar').on('click',function(){
+					swal.fire({title: "Pronto!", text: "Cadastro concluido!", type: 
+					"success"}).then(function(){ 
+					   location.reload();
+					   }
+					);
+				})
+			</script>
 </form>
 </div>
 </body>
