--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -1,68 +1,89 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
-<html xmlns="http://www.w3.or/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<html xmlns="http://www.w3.or/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	crossorigin="anonymous">
 <meta charset="utf-8">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+	crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 <style>
-.container { 
-
-    text-align: center; 
-    
+.container {
+	text-align: center;
 }
 </style>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">SIRIUS</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-      </li>
-    </ul>
-    <span class="navbar-text">
-      Upload
-    </span>
-  </div>
-</nav>
-<div class="container">
-			
-	
-	</br>
-
-	<form th:action="@{/UploadFile}" method="POST"
-		enctype="multipart/form-data" >
-		<input type="file" name="files" multiple /><br/> <br/><input
-			type="submit" class="btn btn-info" value="Subir Arquivo">
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="#">SIRIUS</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse"
+			data-target="#navbarText" aria-controls="navbarText"
+			aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
 		</button>
-		<br>
-	</form>
-	<br>
-	<form th:action="@{/DownloadFile}" method="GET" >
-		<input type="text"  class="form-group col-md-4" name="document" placeholder="document"/><br> 
-		<input type="text" class="form-group col-md-4" name="section" placeholder="section"/><br> 
-		<input type="text" class="form-group col-md-4" name="subsection" placeholder="subsection"/><br>
-		<input type="text" class="form-group col-md-4" name="block" placeholder="block"/><br>
-		<input type="text" class="form-group col-md-4" name="code" placeholder="code"/><br> 
-		<input type="text" class="form-group col-md-4" name="remark" placeholder="remark"/><br>   
-		<input type="submit" class="btn btn-info" value="Baixar Arquivo">
-		</button>
-		<br>
+		<div class="collapse navbar-collapse" id="navbarText">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active"><a class="nav-link" href="/">Home
+						<span class="sr-only">(current)</span>
+				</a></li>
+			</ul>
+			<span class="navbar-text"> Upload </span>
+		</div>
+	</nav>
+	<div class="container">
 
+
+		</br>
+
+		<form th:action="@{/UploadFile}" method="POST"
+			enctype="multipart/form-data">
+			<input type="file" name="files" multiple /><br /> <br /> <input
+				type="button" id="upload" class="btn btn-info" value="Subir Arquivo">
+			</button>
+
+			<script>
+				$('#upload').on('click',function(){
+					swal.fire({title: "Pronto!", text: "Arquivo carregado!", type: 
+					"success"}).then(function(){ 
+					   location.reload();
+					   }
+					);
+				})
+			</script>
+
+
+
+
+			<br>
+		</form>
+		<br>
+		<form th:action="@{/DownloadFile}" method="GET">
+			<input type="text" class="form-group col-md-4" name="document"
+				placeholder="document" /><br> <input type="text"
+				class="form-group col-md-4" name="section" placeholder="section" /><br>
+			<input type="text" class="form-group col-md-4" name="subsection"
+				placeholder="subsection" /><br> <input type="text"
+				class="form-group col-md-4" name="block" placeholder="block" /><br>
+			<input type="text" class="form-group col-md-4" name="code"
+				placeholder="code" /><br> <input type="text"
+				class="form-group col-md-4" name="remark" placeholder="remark" /><br>
+			<input type="submit" class="btn btn-info" value="Baixar Arquivo">
+			</button>
+			<br>
 </body>
 <!-- Footer -->
 <footer class="page-footer font-small blue">
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2021 Copyright: Sirius API 
-
-  </div>
-  <!-- Copyright -->
+	<!-- Copyright -->
+	<div class="footer-copyright text-center py-3">© 2021 Copyright:
+		Sirius API</div>
+	<!-- Copyright -->
 
 </footer>
 <!-- Footer -->
