já é feito a lista de documentos cadastrados no aplicativo, e já é mostrado o codelist de cada item cadastrado

--- a/Projeto/src/main/resources/templates/documents.html
+++ b/Projeto/src/main/resources/templates/documents.html
@@ -20,8 +20,9 @@
 			        </tr>		        
 	        	</thead>
        
-	            	<tr th:each="remark:${remarks}">
-			            <td><span th:text="${remark.getBlock().getSubsection().getSection().getDocument().getName()}"></span></td> 
+	            	<tr th:each="document:${documents}">
+			            <td><a th:href="@{/codelist/{doc}(doc=${document})}"><span th:text="${document}"></span></a></td> 		           
+			            
 			            
 		            </tr>
 				
