--- a/Projeto/src/main/resources/templates/index.html
+++ b/Projeto/src/main/resources/templates/index.html
@@ -30,6 +30,10 @@
 						e Upload</a></li>
 				<li class="nav-item"><a class="nav-link" href="/cadastro">Cadastro</a>
 				</li>
+				
+				<li class="nav-item"><a class="nav-link" href="/documentos">Documentos</a>
+				</li>
+				
 
 			</ul>
 			<span class="navbar-text"> Home Page </span>
