--- a/Projeto/src/main/resources/templates/codelist.html
+++ b/Projeto/src/main/resources/templates/codelist.html
@@ -20,6 +20,7 @@
 			            <th id="tableNome" scope="col">Subseção</th>
 			            <th id="tableNome" scope="col">Bloco</th>
 			            <th id="tableNome" scope="col">Remark</th>
+			            <th id="tableNome" scope="col"></th>
 			        </tr>		        
 	        	</thead>
        
@@ -28,6 +29,8 @@
 			            <td><span th:text="${remark.getBlock().getSubsection().getName() }"></span></td>
 			            <td><span th:text="${remark.getBlock().getName() }"></span></td>
 			            <td><span th:text="${remark.getName() }"></span></td>  
+			            <td><a th:href="@{/delete(rem='remark.getBlock().getSubsection().getSection().getDocument().getId()', name='remark.getBlock().getSubsection().getSection().getDocument().getName()'}})}">Deletar bloco</a></td>
+			            
 			            
 		            </tr>
 				
