--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -80,7 +80,7 @@
       </label>
     </div>
   </div>
-  <input class="btn btn-info" type="button" id="cadastrar" value="Salvar">
+  <input class="btn btn-info" type="submit" id="cadastrar" value="Salvar">
   
 			<script>
 				$('#cadastrar').on('click',function(){
