--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -3,14 +3,22 @@
 <head>
 <html xmlns="http://www.w3.or/1999/xhtml"
 	xmlns:th="http://www.thymeleaf.org">
+	
+	
 <link rel="stylesheet"
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
+	
+	
 <meta charset="utf-8">
+
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
 	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 	crossorigin="anonymous"></script>
+	
+	
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
@@ -42,26 +50,29 @@
 		</br>
 
 		<form th:action="@{/UploadFile}" method="POST"
-			enctype="multipart/form-data">
-			<input type="file" name="files" multiple /><br /> <br /> <input
-				type="button" id="upload" class="btn btn-info" value="Subir Arquivo">
-			</button>
-
+			enctype="multipart/form-data" id="uploadfor">
+			<input type="file" name="files" multiple /><br /> <br />
+			<input type="submit" class="btn btn-info" value="Subir Arquivo"
+				id="carregar">
+			</input>
 			<script>
-				$('#upload').on('click',function(){
-					swal.fire({title: "Pronto!", text: "Arquivo carregado!", type: 
-					"success"}).then(function(){ 
-					   location.reload();
-					   }
-					);
-				})
+
+				$("form#uploadfor").submit(function(event) {
+					//event.preventDefault();
+					swal.fire({
+						title : "Pronto!",
+						text : "Carregamento concluido!",
+						type : "success"
+					}).then(function() {
+						form.submit();
+					});
+				});
 			</script>
-
-
 
 
 			<br>
 		</form>
+
 		<br>
 		<form th:action="@{/DownloadFile}" method="GET">
 			<input type="text" class="form-group col-md-4" name="document"
