--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -7,11 +7,6 @@
 <script>
 
 </script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-	crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
 </head>
 <style>
 .container { 
@@ -43,38 +38,58 @@
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputName">Nome</label>
-      <input name="name" type="text" class="form-control" placeholder="Nome">
+      <input name="name" type="text" class="form-control" placeholder="Nome" required>
     </div>
     <div class="form-group col-md-6">
       <label for="inputLastName">Sobrenome</label>
-      <input name="last_name" type="text" class="form-control" id="inputPassword4" placeholder="Ultimo nome">
+      <input name="last_name" type="text" class="form-control" id="inputPassword4" placeholder="Ultimo nome" required>
     </div>
   </div>
   <div class="form-group">
     <label for="inputEmail">E-mail</label>
-   <input type="text" class="form-control"  placeholder="E-mail">
+   <input type="text" class="form-control"  placeholder="E-mail" required id="email">
   </div>
   <div class="form-group">
-    <label for="inputEmail">Confirme seu e-mail</label>
-    <input name="email" type="email" class="form-control" placeholder="Confirme seu e-mail">
+    <label for="inputEmail">Confirmar seu e-mail</label>
+    <input name="email" type="email" class="form-control" placeholder="Confirmar e-mail" required id="confemail" onblur="confirmEmail(this)">
   </div>
+  <script language='javascript' type="text/javascript">
+    function confirmEmail(input) {
+        if (input.value != document.getElementById('email').value) {
+            input.setCustomValidity('Os e-mails estão diferentes.');
+        } else {
+            // input is valid -- reset the error message
+            input.setCustomValidity('');
+        }
+    }
+</script>
   <div class="form-row">
     <div class="form-group col-md-4">
       <label for="inputPass">Senha</label>
-      <input type="password" class="form-control" placeholder="********">
+      <input type="password" class="form-control" placeholder="********" required id="password">
     </div>
     <div class="form-group col-md-4">
       <label for="inputPass">Confirmar senha</label>
-       <input name= "password" type="password" class="form-control" placeholder="********">
+       <input name= "password" type="password" class="form-control" placeholder="********" required id="password_confirm" oninput="check(this)">
+       <script language='javascript' type='text/javascript'>
+    function check(input) {
+        if (input.value != document.getElementById('password').value) {
+            input.setCustomValidity('As senhas estão diferentes.');
+        } else {
+            // input is valid -- reset the error message
+            input.setCustomValidity('');
+        }
+    }
+</script>
     </div>
     <div class="form-group col-md-4">
       <label for="inputUsername">Nome de usuário</label>
-       <input name= "username" type="text" class="form-control" placeholder="User">
+       <input name= "username" type="text" class="form-control" placeholder="User" required>
     </div>
   </div>
   <div class="form-group">
     <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="gridCheck">
+      <input class="form-check-input" type="checkbox" id="gridCheck" required>
       <label class="form-check-label" for="gridCheck">
         Eu declaro que aceito os termos de uso.
       </label>
@@ -83,7 +98,7 @@
   <input class="btn btn-info" type="submit" id="cadastrar" value="Salvar">
   
 			<script>
-				$('#cadastrar').on('click',function(){
+				$('#a').on('click',function(){
 					swal.fire({title: "Pronto!", text: "Cadastro concluido!", type: 
 					"success"}).then(function(){ 
 					   location.reload();
