--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -51,7 +51,7 @@
   </div>
   <div class="form-group">
     <label for="inputEmail">Confirmar seu e-mail</label>
-    <input name="email" type="email" class="form-control" placeholder="Confirmar e-mail" required id="confemail" onblur="confirmEmail(this)">
+    <input name="email" type="email" class="form-control" placeholder="Confirmar e-mail" required id="confemail" oninput="confirmEmail(this)">
   </div>
   <script language='javascript' type="text/javascript">
     function confirmEmail(input) {
@@ -71,6 +71,8 @@
     <div class="form-group col-md-4">
       <label for="inputPass">Confirmar senha</label>
        <input name= "password" type="password" class="form-control" placeholder="********" required id="password_confirm" oninput="check(this)">
+       
+    </div>
        <script language='javascript' type='text/javascript'>
     function check(input) {
         if (input.value != document.getElementById('password').value) {
@@ -81,7 +83,6 @@
         }
     }
 </script>
-    </div>
     <div class="form-group col-md-4">
       <label for="inputUsername">Nome de usuário</label>
        <input name= "username" type="text" class="form-control" placeholder="User" required>
@@ -95,7 +96,7 @@
       </label>
     </div>
   </div>
-  <input class="btn btn-info" type="submit" id="cadastrar" value="Salvar">
+  <input class="btn btn-info" type="submit" id="cadastrar" value="Salvar" >
   
 			<script>
 				$('#a').on('click',function(){
