--- a/Projeto/src/main/resources/templates/cadastro.html
+++ b/Projeto/src/main/resources/templates/cadastro.html
@@ -4,9 +4,8 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <meta charset="utf-8">
 <title>Cadastro</title>
-<script>
 
-</script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <style>
 .container { 
@@ -73,16 +72,16 @@
        <input name= "password" type="password" class="form-control" placeholder="********" required id="password_confirm" oninput="check(this)">
        
     </div>
-       <script language='javascript' type='text/javascript'>
-    function check(input) {
-        if (input.value != document.getElementById('password').value) {
-            input.setCustomValidity('As senhas estão diferentes.');
-        } else {
-            // input is valid -- reset the error message
-            input.setCustomValidity('');
-        }
-    }
-</script>
+  			<br> <span th:text="${concluido}" id="concluido" style="display: none"/>
+			<script>
+				if (document.getElementById('concluido').textContent == "ok") {
+					Swal.fire(
+							  'Muito Bem!',
+							  'Usuario Cadastrado!',
+							  'success'
+							)
+				}
+			</script>
     <div class="form-group col-md-4">
       <label for="inputUsername">Nome de usuário</label>
        <input name= "username" type="text" class="form-control" placeholder="User" required>
@@ -97,18 +96,10 @@
     </div>
   </div>
   <input class="btn btn-info" type="submit" id="cadastrar" value="Salvar" >
-  
-			<script>
-				$('#a').on('click',function(){
-					swal.fire({title: "Pronto!", text: "Cadastro concluido!", type: 
-					"success"}).then(function(){ 
-					   location.reload();
-					   }
-					);
-				})
-			</script>
+
 </form>
 </div>
+
 </body>
 <footer class="page-footer font-small blue">
 
