--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -15,7 +15,7 @@
 
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
-
+<title>Download e Upload</title>
 
 </head>
 <style>
@@ -87,6 +87,8 @@
 							)
 				}
 			</script>
+			
+				<br> <span th:text="${concluidodown}" id="concluidodown" />
 			
 </body>
 <!-- Footer -->
