--- a/Projeto/src/main/resources/templates/login.html
+++ b/Projeto/src/main/resources/templates/login.html
@@ -12,6 +12,8 @@
 	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
 	integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	crossorigin="anonymous"></script>
+	
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -36,7 +38,13 @@
 <br>
 <div class= "container">
 <div th:if="${param.error}">
-	Senha ou username invalido!
+	<script type="text/javascript">
+	Swal.fire({
+		  icon: 'error',
+		  title: 'Oops...',
+		  text: 'Algo deu errado!'
+		})
+	</script>
 </div>
 
 <div th:if="${param.logout}">
@@ -44,7 +52,7 @@
 </div>
 
 <form th:action="@{/login}" method="post">
-
+  		
 	<div>
 		<label>Username: <input type="text"class="form-control" name="username"/></label>
 	</div>
