ainda nao entende letras na section

--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -90,7 +90,7 @@
 					Swal.fire({
 						  icon: 'error',
 						  title: 'Algo deu errado',
-						  text: 'Verifique se o arquivo condiz com a formatação oficial'
+						  text: 'Verifique se o nome do arquivo condiz com a formatação oficial'
 						})
 				}
 			</script>
