--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -25,9 +25,9 @@
 </style>
 <body>
 
-			<br> <span th:text="${concluidodown}" id="concluidodown"/>
+		
 			
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="#">SIRIUS</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
 			data-target="#navbarText" aria-controls="navbarText"
@@ -36,16 +36,22 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active"><a class="nav-link" href="/">Home
-						<span class="sr-only">(current)</span>
-				</a></li>
+
+				<li class="nav-item"><a class="nav-link" href="/updown">Download
+						e Upload</a></li>
+				<li class="nav-item"><a class="nav-link" href="/cadastro">Cadastro</a>
+				</li>
+				
+				<li class="nav-item"><a class="nav-link" href="/documentos">Documentos</a>
+				</li>
+				
+
 			</ul>
-			<span class="navbar-text"> Upload </span>
+			<span class="navbar-text"> Home Page </span>
 		</div>
-	</nav>
-	<div class="container">
+	</nav>	<div class="container">
 
-
+	<br> <span th:text="${concluidodown}" id="concluidodown"/>
 		</br>
 
 		<form th:action="@{/UploadFile}" method="POST"
@@ -67,10 +73,10 @@
 			<input type="text" class="form-group col-md-4" name="document"
 				placeholder="document" required /><br> <input type="text"
 				class="form-group col-md-4" name="section" placeholder="section"
-				required /><br> <input type="text" class="form-group col-md-4"
+				 /><br> <input type="text" class="form-group col-md-4"
 				name="subsection" placeholder="subsection" /><br> <input
 				type="text" class="form-group col-md-4" name="block"
-				placeholder="block" required /><br> <input type="text"
+				placeholder="block" /><br> <input type="text"
 				class="form-group col-md-4" name="code" placeholder="code" /><br>
 			<input type="text" class="form-group col-md-4" name="remark"
 				placeholder="remark" /><br> <input type="submit"
