--- a/Projeto/src/main/resources/templates/updown.html
+++ b/Projeto/src/main/resources/templates/updown.html
@@ -51,8 +51,8 @@
 		</div>
 	</nav>	<div class="container">
 
-	<br> <span th:text="${concluidodown}" id="concluidodown"/>
-		</br>
+	<br> <span th:text="${concluidodown}" id="concluidodown"/></span>
+		<br>
 
 		<form th:action="@{/UploadFile}" method="POST"
 			enctype="multipart/form-data" id="uploadfor">
@@ -81,9 +81,20 @@
 			<input type="text" class="form-group col-md-4" name="remark"
 				placeholder="remark" /><br> <input type="submit"
 				class="btn btn-info" value="Baixar Arquivo">
-			</button>
-			<br> <span th:text="${concluido}" id="concluido"
-				style="display: none" />
+		</form>
+			
+		<br>
+			
+		<form th:action="@{/CompactFile}">
+			<input type="text" class="form-group col-md-4" name="source"
+			placeholder="source" required /><br>
+			<input type="submit" class="btn btn-info" value="Compactar">
+		</form>
+		
+		<br> 
+			
+			<span th:text="${concluido}" id="concluido"
+				style="display: none" /></span>
 			<script>
 				if (document.getElementById('concluido').textContent == "ok") {
 					Swal.fire(
@@ -94,8 +105,8 @@
 				}
 			</script>
 			
-				<br> <span th:text="${concluidodown}" id="concluidodown" />
-			
+				<br> <span th:text="${concluidodown}" id="concluidodown" /></span>
+		</div>
 </body>
 <!-- Footer -->
 <footer class="page-footer font-small blue">
