--- a/Projeto/src/main/resources/templates/login.html
+++ b/Projeto/src/main/resources/templates/login.html
@@ -27,11 +27,11 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/cadastro">SigUp</a>
+        <a class="nav-link" href="/cadastro">Sign Up</a>
       </li>
     </ul>
     <span class="navbar-text">
-      SingIn
+      Sign In
     </span>
   </div>
 </nav>
